--- a/about.css
+++ b/about.css
@@ -6,9 +6,6 @@
   }
   
   body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
     background-color: #f4f4f9;
     padding: 20px;
@@ -21,6 +18,9 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     text-align: center;
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
   }
   
   h1, h2 {
