--- a/body.css
+++ b/body.css
@@ -104,13 +104,13 @@
 
 .trusted-logos {
     overflow: hidden;
-    white-space: nowrap;
+    white-space:inherit;
     width: 100%;
 }
 
 .logos-wrapper {
     display: flex;
-    gap: 20px;
+  gap: 20px;
     animation: scroll 15s linear infinite;
 }
 
@@ -118,29 +118,26 @@
     height: 40px;
 }
 
-@keyframes scroll {
-    from {
-        transform: translateX(0%);
-    }
-    to {
-        transform: translateX(-50%);
-    }
-}
-
-
 .ai-section {
-    text-align: center;
+
+  text-align: center;
     margin-top: 50px;
+    padding: 50px 0;
+    background-color: #f9f9f9;
 }
 
 .ai-section button {
-    padding: 10px 20px;
+    padding: 20px 50px;
+    font-size: 18px;
+    margin-right: 300px;
     background-color: #6a1b9a;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 20px;
+   
+    
 }
 
 .ai-section button:hover {
@@ -148,8 +145,9 @@
 }
 
 .ai-section img {
-    margin-top: 20px;
+    margin-top: 50px;
     width: 80%;
     max-width: 400px;
     border-radius: 8px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 }
