--- a/crevo.css
+++ b/crevo.css
@@ -1,28 +1,49 @@
-/* General Reset */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    color: #333;
-}
 
 
-section {
-    padding: 2rem;
-    text-align: center;
-}
 
-#home {
-    background: #f4f4f4;
-    padding: 3rem 1rem;
-}
+     
+        section {
+            padding: 2rem;
+            text-align: center;
+            transition: transform 0.5s ease-in-out;
+           
+        }
 
-#about, #services, #contact {
-    background: #8e8e8e;
-    margin-top: 1rem;
-}
+        #home {
+            background: #f0f0f0;
+            padding: 3rem 1rem;
+            cursor: pointer;
+           
+        }
+
+        #about, #services, #contact {
+            background: #e8e8e8;
+            margin-top: 1rem;
+            padding: 3rem 1rem;
+       
+
+
+        }
+
+        section:hover {
+            transform: scale(1.05);
+        }
+
+        a {
+         
+            color: inherit;
+        }
+
+        a:hover {
+
+            color: #033b76;
+        }
+
+        img{
+            width: 30%;
+            height: 30%;
+            border-radius: 50%;
+            margin-top: 10px; 
+            margin-bottom: 10px;
+            margin-left: 35%;
+        }
