--- a/footer.css
+++ b/footer.css
@@ -89,3 +89,10 @@ body {
     font-size: 20px;
     text-decoration: none;
 }
+  
+.footer-bottom {
+    text-align: center;
+    padding-top: 1rem;
+    border-top: 1px solid #444;
+  }
+  
