--- a/navbar.css
+++ b/navbar.css
@@ -1,18 +1,23 @@
-.navbar {
-    background-color: #f8f9fa; 
-    padding: 1rem;
-}
-
-.navbar-brand {
-    font-weight: bold;
-    font-size: 1.5rem;
+* {
+    font-family: 'Arial', sans-serif;
 }
 
 .navbar-nav .nav-link {
-    font-size: 1rem;
-    margin-right: 1rem;
+    color: #000000;
+    margin: 0 10px;
+    text-decoration: none;
+    font-weight: 700;
+    transition: color 0.3s ease, background-color 0.3s ease;
 }
 
+.navbar-nav .nav-link:hover {
+    background: linear-gradient(135deg, #71b7e6, #9b59b6);
+}
+
+.navbar-nav .nav-link:active{
+    background: #0d6efd;
+    color: #ffffff;
+}
 /* Styling for Search Form */
 .navbar .form-control {
     width: 180px;
@@ -28,15 +33,18 @@
 .navbar-buttons .btn-outline-primary {
     border-color: #0d6efd;
     color: #0d6efd;
+    font-weight: 500;
+
 }
 
 .navbar-buttons .btn-outline-primary:hover {
-    background-color: #0d6efd;
+    background-color: #878787;
     color: #ffffff;
+    font-weight: 700;
 }
 
 .navbar-buttons .btn-primary {
-    background-color: #0d6efd;
+    background-color: #0548ae;
     border: none;
 }
 
@@ -44,8 +52,8 @@
     background-color: #0044cc;
 }
 
-.navbar-buttons{
-background-color: rgb(218, 218, 218);
-padding:10px;
-border-radius: 10px;
+.navbar-buttons {
+    background-color: rgb(218, 218, 218);
+    padding: 10px;
+    border-radius: 10px;
 }
