--- a/education.css
+++ b/education.css
@@ -22,12 +22,12 @@ body {
 .header h1 {
   font-size: 32px;
   font-weight: bold;
-  color: #4a90e2;
+  color: #f8f8f8;
 }
 
 .header p {
   font-size: 18px;
-  color: #555;
+  color: #000000;
   margin-top: 10px;
 }
 
