--- a/navbar.css
+++ b/navbar.css
@@ -1,5 +1,12 @@
 * {
-    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background: linear-gradient(135deg, #71b7e6, #9b59b6);
+
 }
 
 .navbar-nav .nav-link {
@@ -10,14 +17,17 @@
     transition: color 0.3s ease, background-color 0.3s ease;
 }
 
+
 .navbar-nav .nav-link:hover {
     background: linear-gradient(135deg, #71b7e6, #9b59b6);
+    border-radius: 7px;
 }
 
-.navbar-nav .nav-link:active{
+.navbar-nav .nav-link:active {
     background: #0d6efd;
     color: #ffffff;
 }
+
 /* Styling for Search Form */
 .navbar .form-control {
     width: 180px;
@@ -37,19 +47,13 @@
 
 }
 
-.navbar-buttons .btn-outline-primary:hover {
-    background-color: #878787;
-    color: #ffffff;
-    font-weight: 700;
-}
-
 .navbar-buttons .btn-primary {
     background-color: #0548ae;
     border: none;
 }
 
 .navbar-buttons .btn-primary:hover {
-    background-color: #0044cc;
+    background-color: #01256d;
 }
 
 .navbar-buttons {
